[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suanqi"
version = "0.1.4"
description = "SuanQi: run local Python computing tasks on cloud servers and retrieve results."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "SuanQi Project"}
]
keywords = ["cloud", "compute", "cli", "tencentcloud", "cos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "paramiko>=3.0.0",
  "tencentcloud-sdk-python>=3.0.0",
  "cos-python-sdk-v5>=1.9.0",
]

[project.scripts]
suanqi = "suanqi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
